--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,7 @@
         "ext-openssl": "*",
         "ext-zip": "*",
         "ext-iconv": "*",
+        "ext-gd": "*",
         "phine/observer": "2.0",
         "phine/exception": "1.0",
         "phpmailer/phpmailer": "^6",
