improvement: added ext-curl to composer.json

--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
         "ext-iconv": "*",
         "ext-gd": "*",
         "ext-gmp": "*",
+        "ext-curl": "*",
         "phine/observer": "2.0",
         "phine/exception": "1.0",
         "phpmailer/phpmailer": "^6",
