improvement: missing requirement ext-fileinfo in composer.json

--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,7 @@
         "ext-mbstring": "*",
         "ext-xml": "*",
         "ext-json": "*",
+        "ext-fileinfo": "*",
         "ext-bcmath": "*",
         "ext-soap": "*",
         "ext-openssl": "*",
