--- a/composer.json
+++ b/composer.json
@@ -131,7 +131,7 @@
         "phpoffice/phpspreadsheet": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4",
+        "phpunit/phpunit": "*",
         "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
