bugfix: phine/exception source code has been lately removed by last known maintainer

--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,17 @@
                     "type": "zip"
                 }
             }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "phine/exception",
+                "version": "1.0",
+                "dist": {
+                    "url": "https://chilan.com/lms-plus/phine-exception-1.0.zip",
+                    "type": "zip"
+                }
+            }
         }
     ],
     "require": {
