devel/improvement: composer 2.2 requires to specify explicitly packages which want to use plugin mechanism

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,10 @@
 {
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "oomphinc/composer-installers-extender": true
+        }
+    },
     "name": "lmsgit/lms",
     "description": "Lan Management System (LMS)",
     "homepage": "http://lms.org.pl/",
