--- a/sample/lms-full.ini
+++ b/sample/lms-full.ini
@@ -158,10 +158,6 @@
 
 ; lastonline_limit     = 600
 
-; Specify number of days (including current day) on timetable. Default: 7.
-
-; timetable_days_forward = 2
-
 ; Qualify to use current day of month for payment day instead of most often used day.
 ; Default: 0 (off).
 
@@ -221,6 +217,12 @@
 ; Prefix for account home directory. Default: /home/
 
 ; homedir_prefix 	= /home/users/
+
+[timetable]
+
+; Specify number of days (including current day) on timetable. Default: 7.
+
+; timetable_days_forward = 2
 
 [directories]
 
