--- a/sample/lms-full.ini
+++ b/sample/lms-full.ini
@@ -181,11 +181,6 @@
  
 ; helpdesk_backend_mode = 1
 
-; Name of message sender or predefined values: 'queue' - ticket's queue name,
-; 'user' - name of logged user. Default: empty.
-
-; helpdesk_sender_name = Helpdesk
-
 ; New ticket notification to all users with rights for queue to which new 
 ; ticket was added. Default: disabled
 
@@ -952,6 +947,11 @@
 ; mail_from_name = 'Bok SuperNET'
 
 ; Serwer SMTP przez który będzie wysyłane potwierdzenie. Domyślnie: localhost
+
+; Name of message sender or predefined values: 'queue' - ticket's queue name,
+; 'user' - name of logged user. Default: empty.
+
+; sender_name = Helpdesk
 
 ; smtp_server = smtp.mydomain.pl
 
