devel/cleanup: renamed 'phpui.helpdesk_backend_mode' to 'rt.backend_mode'

--- a/sample/lms-full.ini
+++ b/sample/lms-full.ini
@@ -174,13 +174,6 @@
 
 ; arpd_servers          = 192.168.1.1 192.168.2.1:2029
 
-; When enabled, all messages in helpdesk system (except those sent to the requestor)
-; will be send to mail server at address of right queue. On server should be
-; running script lms-rtparser, which will write messages to database.
-; Default: disabled
- 
-; helpdesk_backend_mode = 1
-
 ; New ticket notification to all users with rights for queue to which new 
 ; ticket was added. Default: disabled
 
@@ -929,6 +922,13 @@
 ; ---------------------------------------------------------------------------
 
 [rt]
+
+; When enabled, all messages in helpdesk system (except those sent to the requestor)
+; will be send to mail server at address of right queue. On server should be
+; running script lms-rtparser, which will write messages to database.
+; Default: disabled
+
+; backend_mode = 1
 
 ; Numer ID kolejki, do której trafią zgłoszenia. Jeśli nie
 ; podano, Kolejka zostanie odszukana na podstawie adresu odbiorcy maila.
