--- a/sample/lms-full.ini
+++ b/sample/lms-full.ini
@@ -174,11 +174,6 @@
 
 ; arpd_servers          = 192.168.1.1 192.168.2.1:2029
 
-; New ticket notification to all users with rights for queue to which new 
-; ticket was added. Default: disabled
-
-; newticket_notify = 0
-
 ; Specify format of verbal amounts representation (on invoices). For value "1"
 ; verbal expand of 123,15 will be "one two thr 15/100". Default: 0
 
@@ -948,6 +943,16 @@
 
 ; Serwer SMTP przez który będzie wysyłane potwierdzenie. Domyślnie: localhost
 
+; mail_dir =
+
+; Katalog tymczasowy. Domyślnie zostanie użyty katalog
+; zdefiniowany w zmiennej systemowej lub /tmp.
+
+; New ticket notification to all users with rights for queue to which new
+; ticket was added. Default: disabled
+
+; new_ticket_notify = 0
+
 ; Name of message sender or predefined values: 'queue' - ticket's queue name,
 ; 'user' - name of logged user. Default: empty.
 
@@ -958,11 +963,6 @@
 ; Katalog w którym zostaną zapisane załączniki. Katalog ten powinien być
 ; dostępny dla apache'a i użytkownika uruchamiającego lms-rtparser. 
 ; Gdy nie ustawiono, załączniki zostaną utracone. Domyślnie: niezdefiniowany.
-
-; mail_dir = 
-
-; Katalog tymczasowy. Domyślnie zostanie użyty katalog 
-; zdefiniowany w zmiennej systemowej lub /tmp.
 
 ; tmp_dir = /tmp
 
