--- a/sample/lms-full.ini
+++ b/sample/lms-full.ini
@@ -949,9 +949,9 @@
 ; zdefiniowany w zmiennej systemowej lub /tmp.
 
 ; New ticket notification to all users with rights for queue to which new
-; ticket was added. Default: disabled
+; ticket was added. Default: enabled
 
-; new_ticket_notify = 0
+; new_ticket_notify = 1
 
 ; Name of message sender or predefined values: 'queue' - ticket's queue name,
 ; 'user' - name of logged user. Default: empty.
