--- a/.travis.yml
+++ b/.travis.yml
@@ -66,8 +66,8 @@ before_script:
   - mysql lms < doc/lms-stable.mysql
 
   - cd /var/www/html/lms/; for dir in 'backups cache documents templates_c userpanel/templates_c rtattachments js/xajax_js/deferred storage/rt storage/voipcalls storage/customercalls'; do mkdir -p $dir && chmod o-rwx -R $dir; done
-  - php devel/upgradedb.php -C samples/lms-pgsql-travis.ini
-  - php devel/upgradedb.php -C samples/lms-mysql-travis.ini
+  - php devel/upgradedb.php -C sample/lms-pgsql-travis.ini
+  - php devel/upgradedb.php -C sample/lms-mysql-travis.ini
   - if find . -mtime -1 -name "*.php" ! -path "./vendor/*" -print0 | xargs -0 -n 1 -P 8 php -l | grep -v "No syntax errors detected"; then exit 1; fi
   - if find templates -mtime -1 -type f -iname '*.html' | xargs devel/smartylint.php |grep -i "syntax error"; then exit 1; fi
   - ./vendor/bin/phpcs --standard=$PHPCS_STANDARD .
