--- a/composer.json
+++ b/composer.json
@@ -128,6 +128,7 @@
         "datatables/datatables": "^1.10",
         "setasign/fpdi-tcpdf": "^2",
         "pear/mail": "^1.3",
+        "pear/net_smtp": "^1.10",
         "gusapi/gusapi": "^5",
         "erusev/parsedown": "^1",
         "tecnickcom/tc-lib-barcode": "^1",
