bugfix: missing some required PHP extensions (ext-sockets)

--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,7 @@
         "php" : ">=7.2",
         "ext-mbstring": "*",
         "ext-xml": "*",
+        "ext-sockets": "*",
         "ext-json": "*",
         "ext-fileinfo": "*",
         "ext-bcmath": "*",
